src/test/deca/context/invalid/inst_return_in_void_method_if.deca
// Test la règle 3.24: Pas le droit de return quelque chose alors qu'on attend pas de return
// dans un if

class A  {

    void voidMethod(){
        if (true){
            return 1;
        }
        
    }
}



// Resultat:

//# TODOTEST